--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,10 @@ project(c_labyrinth
 
 add_executable(game 
     src/game.c
+    src/assets-manager/image-loader/image.h
+    src/assets-manager/image-loader/image-loader.c
+    src/assets-manager/image-loader/image-loader.h
+    src/assets-manager/config-manager/config-manager.c
+    src/assets-manager/config-manager/config-manager.h
+    src/assets-manager/assets.h
 )
