déplacement du type sur la configuration d'image en première position correction du retour booléen des fonctions sur liste générique implémentation du chargement de chemin statique ajout de l'utilitaire d'extraction de dossier ajout du paramètre dossier parent dans le chargement de configuration d'image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ add_subdirectory("libs/libyaml")
 
 add_executable(game 
     src/game.c
-    src/assets-manager/assets.h
+    src/assets-manager/assets/assets.h
+    src/assets-manager/assets/assets.c
     src/assets-manager/config-manager/config-manager.c
     src/assets-manager/config-manager/config-manager.h
     src/assets-manager/config-manager/tills-manager.c
