implémentation de la récupération de la configuration des items ajout de la méthode d'affichage de configuration d'items ajout de la méthode de libération des ressources d'une configuration d'items

--- a/resources/game-assets/ennemies/config.yaml
+++ b/resources/game-assets/ennemies/config.yaml
@@ -1,7 +1,7 @@
 ennemies:
-  - path: "/first"
+  - path: "/first/config.yaml"
     name: "Ennemie 1"
     id: 1
-  - path: "/second"
+  - path: "/second/config/yaml"
     name: "Ennemie 2"
     id: 2
