--- a/resources/game-assets/ennemies/config.yaml
+++ b/resources/game-assets/ennemies/config.yaml
@@ -2,5 +2,5 @@
   path: "/first/config.yaml"
   name: "Ennemie 1"
 2:
-  path: "/second/config/yaml"
+  path: "/second/config.yaml"
   name: "Ennemie 2"
