ajout du format de configuration d'une map de jeux ajout et début implémentation du chargement d'une map de jeux (définition des structures et création de la fonction de chagrement) ajout et début d'implémentation des fonctions d'affichage et libération de maps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ add_executable(game
         src/assets-manager/config-manager/heroes-manager.h
         src/assets-manager/config-manager/enemies-manager.c
         src/assets-manager/config-manager/enemies-manager.h
+        src/assets-manager/config-manager/game-map-manager.c
+        src/assets-manager/config-manager/game-map-manager.h
         src/utils/generic-list/generic-list.c
         src/utils/generic-list/generic-list.h
         src/game/game.c
