définition et implémentation du chargement de configuration d'ennemies et items d'une map de jeux

--- a/resources/home-config/map.yaml
+++ b/resources/home-config/map.yaml
@@ -3,5 +3,9 @@ tills: [
   [[0,0,1],[0,0,1]],
   [[30,0,1],[0,0,1]]
 ]
-items: []
-enemies: []
+items: [
+  [30,0,1]
+]
+enemies: [
+  [100,90,10]
+]
